[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actors/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://assets/images/spaceship/Ativo 3.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/ExplosionEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/explosion2/Ativo 1.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.8381, 65.4374 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 35.5 )

[node name="Enemy2" type="KinematicBody2D"]
position = Vector2( 99.011, 307.531 )
scale = Vector2( 0.9, 0.9 )
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 207.275, 389.114 ],
"_edit_vertical_guides_": [ 15.0985, 180.012 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -18.7089, 0.8909 )
shape = SubResource( 1 )

[node name="rocket-ship" type="Sprite" parent="."]
position = Vector2( -17.1681, -2.92783 )
scale = Vector2( 0.561482, -0.504054 )
texture = ExtResource( 2 )

[node name="GunBarrel1" type="Node2D" parent="."]
position = Vector2( -43.2601, 44.2036 )

[node name="GunBarrel2" type="Node2D" parent="."]
position = Vector2( 5.47024, 45.9854 )

[node name="BulletDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -11.5816, -5.34537 )
scale = Vector2( 5.18722, 6.61266 )

[node name="explosion" type="Sprite" parent="."]
visible = false
position = Vector2( -9, 0.764282 )
texture = ExtResource( 4 )

[node name="ExplosionEnemy" parent="." instance=ExtResource( 3 )]
[connection signal="death" from="." to="." method="_on_Enemy2_death"]
[connection signal="area_entered" from="BulletDetector" to="." method="_on_BulletDetector_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
